--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,6 @@ git:
   submodules: true
 
 os:
-  - linux
   - osx
 
 env:
@@ -14,29 +13,8 @@ env:
     - COMPILER=gcc
     - PYTHON_VERSION=3.6
   matrix:
-    - TASK=regular
-    - TASK=regular COMPILER=clang
-    - TASK=mpi PYTHON_VERSION=2.7
-    - TASK=pylint
-    - TASK=check-docs
-    - TASK=if-else
-    - TASK=sdist PYTHON_VERSION=3.4
-    - TASK=bdist PYTHON_VERSION=3.5
     - TASK=gpu METHOD=source
-    - TASK=gpu METHOD=pip
-
-matrix:
-  exclude:
-    - os: osx
-      env: TASK=gpu METHOD=source
-    - os: osx
-      env: TASK=gpu METHOD=pip
-    - os: osx
-      env: TASK=if-else
-    - os: osx
-      env: TASK=pylint
-    - os: osx
-      env: TASK=check-docs
+    - TASK=gpu METHOD=source COMPILER=clang
 
 before_install:
   - test -n $CC  && unset CC
@@ -44,9 +22,9 @@ before_install:
   - export PATH="$HOME/miniconda/bin:$PATH"
   - export LGB_VER=$(head -n 1 VERSION.txt)
   - export AMDAPPSDK=$HOME/AMDAPPSDK
-  - export LD_LIBRARY_PATH="$AMDAPPSDK/lib/x86_64:$LD_LIBRARY_PATH"
+#  - export LD_LIBRARY_PATH="$AMDAPPSDK/lib/x86_64:$LD_LIBRARY_PATH"
   - export LD_LIBRARY_PATH="/usr/local/clang/lib:$LD_LIBRARY_PATH"  # fix error "libomp.so: cannot open shared object file: No such file or directory" on Linux with Clang
-  - export OPENCL_VENDOR_PATH=$AMDAPPSDK/etc/OpenCL/vendors
+#  - export OPENCL_VENDOR_PATH=$AMDAPPSDK/etc/OpenCL/vendors
 
 install:
   - bash .travis/setup.sh
